tests/ui/consts/issue-39974.stderr
error[E0308]: mismatched types
  --> $DIR/issue-39974.rs:1:21
   |
LL | const LENGTH: f64 = 2;
   |                     ^ expected `f64`, found integer
   |
help: use a float literal
   |
LL | const LENGTH: f64 = 2.0;
   |                      ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
